--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Sun Apr 19 10:52:30 1998  Martin Junius  <mj@fido.de>
+
+	======= Release 4.3a2 ================================================
+
+	------- CVS ci, tag R43a2 --------------------------------------------
+
+	* examples/orodruin/passwd: added "uplink" password example.
+
+	* src/areafix/ftnafutil.c (do_mail): use pwd->args as recipient
+	  name if non-empty.
+
 Sat Apr 18 18:22:34 1998  Martin Junius  <mj@fido.de>
 
 	------- CVS ci -------------------------------------------------------
