--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 Sat May 23 21:02:18 1998  Martin Junius  <mj@fido.de>
 
-	------- CVS ci -------------------------------------------------------
+	======= Release 4.3a3 ================================================
+
+	------- CVS ci, tag R43a3 --------------------------------------------
 
 	* sendmail/mailer/ftn.m4: dito.
 
